--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        </div>
         <div class="col-xs-6 menu">
             <ul class="pc">
-                <li class="active"><a href="misdirecciones.html">Direcciones</a></li>
+                <li class="active"><a href="misdirecciones.html">Direccionesfinal</a></li>
             </ul>
         </div>
     </div>
